--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "react-icons": "^5.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
