--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node src/seed/seed-db.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
@@ -25,6 +27,7 @@
     "prisma": "^5.10.2",
     "react-icons": "^5.0.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
