--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.7",
+    "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
