--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.15",
