--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "swiper": "^11.0.7",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
